Closed Bug 1332776 Opened 7 years ago Closed 7 years ago

Ensure that the dom.min_tracking_timeout_value pref takes effect

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Without this, we would only try to clamp the timeout for background
windows and nested timeouts.  We should also do this for all timeouts
that are classified as tracking.
Assignee: nobody → ehsan
Blocks: 1325467
Comment on attachment 8829020 [details] [diff] [review]
Ensure that the dom.min_tracking_timeout_value pref takes effect

Review of attachment 8829020 [details] [diff] [review]:
-----------------------------------------------------------------

Hmm, I think I pointed this out in one of my reviews previously.  I asked you to merge this conditional with DOMMinTimeoutValue() to create a ComputeTimeoutValue() that could be used everywhere.  Having the conditional outside the value computation is hard to maintain.

You can do that as a follow-up, though.
Attachment #8829020 - Flags: review?(bkelly) → review+
(In reply to Ben Kelly [:bkelly] from comment #2)
> Hmm, I think I pointed this out in one of my reviews previously.  I asked
> you to merge this conditional with DOMMinTimeoutValue() to create a
> ComputeTimeoutValue() that could be used everywhere.  Having the conditional
> outside the value computation is hard to maintain.

Yes, but that patch was never landed.
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b9d812c36629
Ensure that the dom.min_tracking_timeout_value pref takes effect; r=bkelly
https://hg.mozilla.org/mozilla-central/rev/b9d812c36629
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: