Bug 1332776 - Ensure that the dom.min_tracking_timeout_value pref takes effect; r=bkelly

Without this, we would only try to clamp the timeout for background
windows and nested timeouts.  We should also do this for all timeouts
that are classified as tracking.